--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ django-cors-headers = "==3.8.0"
 requests = "==2.26.0"
 gunicorn = "==20.1.0"
 django-heroku = "==0.3.1"
-psycopg2 = "==2.7.5"
+psycopg2 = "*"
 pandas = "*"
 asgiref = "==3.4.1"
 certifi = "==2021.5.30"
